public enum AuthenticationStatus {
    SUCCESS,
    FAIL;
}
