public class InvalidAuthenticationException {
}
